kubernetes/clusters/home/infrastructure/flux-operator/instance/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: flux-dashboard-auth
  namespace: flux-system
spec:
  basicAuth:
    secret: flux-dashboard-auth
    removeHeader: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-forward-auth
  namespace: flux-system
spec:
  forwardAuth:
    address: http://authentik-server.authentik.svc.cluster.local:80/outpost.goauthentik.io/auth/traefik
    trustForwardHeader: true
    authResponseHeaders:
      - X-authentik-username
      - X-authentik-groups
      - X-authentik-entitlements
      - X-authentik-email
      - X-authentik-name
      - X-authentik-uid
      - X-authentik-jwt
      - X-authentik-meta-jwks
      - X-authentik-meta-outpost
      - X-authentik-meta-provider
      - X-authentik-meta-app
      - X-authentik-meta-version
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flux-operator
  namespace: flux-system
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Flux
    gethomepage.dev/group: Observability
    gethomepage.dev/icon: flux.png
    gethomepage.dev/href: https://flux.syslabs.dev
    gethomepage.dev/podSelector: app.kubernetes.io/name=flux-operator
    gethomepage.dev/statusStyle: "dot"
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`flux.syslabs.dev`)
      kind: Rule
      middlewares:
        - name: authentik-forward-auth
      services:
        - name: flux-operator
          port: 9080
  tls: {}
